# mohspitality_backend_main

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/auth/: auth.py
app/config/: config.py
app/database/: database.py
app/models/: models.py
app/routes/: auth_router.py  event_router.py  item_router.py  notification_routes.py  order_router.py  payroll_routes.py  qrcode_router.py  reservation_router.py  staff_attendance_routes.py  user_router.py
app/schemas/: event_schema.py  item_schema.py  order_schema.py  payroll_schema.py  profile_schema.py  reservation_schema.py  room_schema.py  staff_attendance_schema.py  subscriptions.py  user_schema.py
app/services/: analytics_service.py  auth_service.py  event_service.py  item_service.py  notification_service.py  order_service.py  payment_service.py  payroll_service.py  profile_service.py  qrcode_service.py  reservation_service.py  staff_attendance_service.py  subscription_service.py
app/utils/: utils.py
tests/: conftest.py  test_auth.py
